test/parser/error/err_31_condition_bad_op.pl0
program p; 
var x; 
begin 
if x 1 then 
end